RESOLVED FIXED261460
Running WPT for WebVTT in run-webkit-tests results in a timeout
https://bugs.webkit.org/show_bug.cgi?id=261460
Summary Running WPT for WebVTT in run-webkit-tests results in a timeout
Kueno
Reported 2023-09-12 00:45:00 PDT
As reported in https://bugs.webkit.org/show_bug.cgi?id=179370#c2, running WPT for WebVTT in run-webkit-tests results in a timeout. This is due to the caption mode of WebKitTestRunner being defaulted to `ForceOnly`, under which conditions the captions never appear. This is not a problem for LayoutTests other than WPT because we can adjust the caption mode with `window.internals.setCaptionDisplayMode('Automatic')` to ensure correct caption display during testing. To resolve this issue, we need to make the caption mode configurable in run-webkit-tests instead of using the internal method in the window object.
Attachments
Kueno
Comment 1 2023-09-12 00:46:03 PDT
EWS
Comment 2 2023-09-17 19:07:43 PDT
Committed 268073@main (2e6a6bb78167): <https://commits.webkit.org/268073@main> Reviewed commits have been landed. Closing PR #17689 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-09-17 19:08:15 PDT
Note You need to log in before you can comment on or make changes to this bug.